non-BCEL localVarTable, lineNumberTable, exceptionHandlers, exceptions init
ParameterAnnotations don't work yet and need modification of ClassFileReader